--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -15,4 +15,4 @@
 
 <app-ng-chat-tiendi [adapter]="adapter" [userId]="userId"></app-ng-chat-tiendi>
 
-<p-toast></p-toast>
+<p-toast position="bottom-right" key="mgsBR"></p-toast>
