--- a/src/app/layout/content/content.component.html
+++ b/src/app/layout/content/content.component.html
@@ -1,9 +1,10 @@
 <app-breadcrumb [items]="items" class="hidden"></app-breadcrumb>
 <app-carousel [productos]="productos" (onEmitProductID)="emitProductID($event)"></app-carousel>
 
-<p-sidebar [(visible)]="visibleSideBag" (onHide)="onClearOutlet()" position="right" [showCloseIcon]="false"
+<p-sidebar [(visible)]="visibleSideBag" (onHide)="onCloseSideBag()" position="right" [showCloseIcon]="false"
   [baseZIndex]="10000" styleClass="p-sidebar-md" class="pt-2">
-  <app-bag *ngIf="visibleSideBag" (onCloseSideBag)="closeSideBag()"></app-bag>
+  <app-bag *ngIf="visibleSideBag" [hidden]="visibleTermns" (onCloseSideBag)="onCloseSideBag()" (onShowTermsSideBag)="showTermsSideBag()" [valueProgress]="valueProgress"></app-bag>
+  <app-terms-and-conditions [hidden]="!visibleTermns" (onHideTermsSideBag)="hideTermsSideBag()"></app-terms-and-conditions>
 </p-sidebar>
 
 <p-sidebar [(visible)]="visibleSideBarLeft" (onHide)="onClearOutlet()" position="left" [showCloseIcon]="false"
