--- a/src/app/layout/component/card/card.component.html
+++ b/src/app/layout/component/card/card.component.html
@@ -7,7 +7,7 @@
         </div>
         <img class="h-full w-full" (click)="emitProductID(1)" src="../../../../assets/perfil-tiendi-icono.png" alt="" />
       </div>
-      <div class="text-xs gray pt-1 mb-1">
+      <div class="text-xs gray pt-1 MarcaDes">
         <b> {{ producto.MarcaDes }}</b>
       </div>
       <div class="text-sm pt-1">{{ producto.Nombre }}</div>
@@ -20,6 +20,8 @@
       </div>
       <div [ngClass]="{ 'font-bold': producto.PrecioDescuento == 0 }" class="font-bold pt-1 price_box price_ black">
         S/ {{ producto.Precio.toFixed(2) }}
+      </div>
+      <div *ngIf="producto.PrecioDescuento == 0" class="cart_hide_space">
       </div>
       <div class="flex flex-row justify-content-center mt-4">
         <button pButton pRipple type="button" icon="pi pi-minus"
