add function repeat pedido

--- a/src/app/layout/component/order-summary/order-summary.component.html
+++ b/src/app/layout/component/order-summary/order-summary.component.html
@@ -8,7 +8,7 @@
   	<span class="pedido_text text-xl font-bold">
   		Pedido N°: {{pedido.Numero}}
   	</span>
-  	<button>
+  	<button (click)="onRepeatPedidoSetActual()">
   		<span class="text-base">
   			Repetir pedido
   		</span>
