--- a/src/app/layout/component/order-summary/order-summary.component.scss
+++ b/src/app/layout/component/order-summary/order-summary.component.scss
@@ -1,18 +1,18 @@
 i {
-    height: unset;
-    width: unset;
-    font-size: 20px;
+  height: unset;
+  width: unset;
+  font-size: 20px;
 }
 
 .p-card .p-card-content {
-    padding: .5rem 0;
+  padding: 0.5rem 0;
 }
-.top_pedido_box{
-	width: 100%;
-	button{
-		background-color: transparent;
-		border: none;
-		color: #FD6435;
-		cursor: pointer;
-	}
+.top_pedido_box {
+  width: 100%;
+  button {
+    background-color: transparent;
+    border: none;
+    color: #fd6435;
+    cursor: pointer;
+  }
 }
