--- a/src/app/layout/component/chat/ng-chat-info/ng-chat-info.component.html
+++ b/src/app/layout/component/chat/ng-chat-info/ng-chat-info.component.html
@@ -6,10 +6,12 @@
 			<div class="shop-message-container-i" (click)="onBackChatShopList()">
 				<i class="pi pi-chevron-left"></i>
 			</div>
-			<img src="../../../assets/perfil-tiendi-icono-invertido.png" alt="tiendi">
+			<div class="chat-shop-message-container-img">
+				<img src="../../../assets/perfil-tiendi-icono-invertido.png" alt="tiendi">
+			</div>
 			<div class="shop-message-container">
 				<div class="message-container">
-					<span class="message">Tiendi</span>
+					<span class="text-xs text-900 font-bold">Tiendi</span>
 					<span class="message-det">Vende con nosotros</span>
 				</div>
 			</div>
@@ -17,27 +19,27 @@
 
 		<div class="chat-shop-form-container">
 			<div class="p-grid p-fluid chat-form-container">
-				<span class="title">¿Quieres vender con nosotros?</span>
+				<span class="title font-bold text-xs text-900">¿Quieres vender con nosotros?</span>
 				<div class="p-col-12">
 					<div class="p-inputgroup">
-						<span class="p-inputgroup-addon"><i class="pi pi-user"></i></span>
+						<span class="p-inputgroup-addon"><i class="material-icons">person</i></span>
 						<input type="text" pInputText class="p-inputtext-sm w-full" placeholder="¿Como te llamas?">
 					</div>
 				</div>
 				<div class="p-col-12">
 					<div class="p-inputgroup">
-						<span class="p-inputgroup-addon"><i class="pi pi-inbox"></i></span>
+						<span class="p-inputgroup-addon"><i class="material-icons-outlined">mail_outline</i></span>
 						<input type="text" pInputText class="p-inputtext-sm w-full" placeholder="Ingresa tu correo electrónico">
 					</div>
 				</div>
 				<div class="p-col-12">
 					<div class="p-inputgroup">
-						<span class="p-inputgroup-addon"><i class="pi pi-phone"></i></span>
+						<span class="p-inputgroup-addon"><i class="material-icons">call</i></span>
 						<input type="text" pInputText class="p-inputtext-sm w-full" placeholder="Ingresa tu nro. de teléfono">
 					</div>
 				</div>
-				<div class="p-col-12">
-					<p-toggleButton (onChange)="onSend($event)" [disabled]="!checked" [(ngModel)]="checked" onLabel="Nosotros te llamamos" offLabel="Gracias!" class="p-button-sm p-button-rounded"></p-toggleButton>
+				<div class="p-col-12 mt-2">
+					<p-toggleButton (onChange)="onSend($event)" [disabled]="!checked" [(ngModel)]="checked" onLabel="Nosotros te llamamos" offLabel="Gracias!" class="p-button-sm p-button-rounded info-chat-btn"></p-toggleButton>
 				</div>
 			</div>
 		</div>
