--- a/src/app/layout/component/chat/ng-chat-shop/ng-chat-shop.component.html
+++ b/src/app/layout/component/chat/ng-chat-shop/ng-chat-shop.component.html
@@ -1,5 +1,5 @@
 <!-- CHAT TIENDA -->
-<div id="ng-chat-shop">
+<div id="ng-chat-shop" class="chat-container-box">
 	<div class="chat-container absolute bottom-0 right-0 border-round">
 		<div class="chat-shop-message-container">
 			<div class="shop-message-container-i" (click)="onBackChatShopList()">
