--- a/src/app/layout/component/order-summary/order-summary.component.html
+++ b/src/app/layout/component/order-summary/order-summary.component.html
@@ -5,11 +5,11 @@
       (click)="onBackRecentOrderMore()"></button>
   </div>
   <div class="flex align-content-center top_pedido_box justify-content-between">
-  	<span class="pedido_text text-xl font-bold">
+  	<span class="pedido_text text-lg font-bold">
   		Pedido N°: {{pedido.Numero}}
   	</span>
   	<button (click)="onRepeatPedidoSetActual()">
-  		<span class="text-base">
+  		<span class="text-sm font-bold">
   			Repetir pedido
   		</span>
   	</button>
