--- a/src/app/layout/component/recent-order-more/recent-order-more.component.html
+++ b/src/app/layout/component/recent-order-more/recent-order-more.component.html
@@ -3,11 +3,11 @@
     <div class="flex flex-row w-full align-items-center">
       <div class="flex flex-column w-1">
         <button pButton pRipple type="button" icon="pi pi-times"
-          class="p-button-rounded p-button-secondary p-button-text" style="color: #0cc2a9"
+          class="p-button-rounded p-button-secondary p-button-text close__btn"
           (click)="closeSideOrder()"></button>
       </div>
 
-      <div class="font-bold text-xl">
+      <div class="font-bold text-lg">
         Mis pedidos
       </div>
       <div class="ml-auto search-box-top">
