--- a/src/app/layout/component/chat/ng-chat-closed/ng-chat-closed.component.scss
+++ b/src/app/layout/component/chat/ng-chat-closed/ng-chat-closed.component.scss
@@ -7,5 +7,41 @@
     .chat-toogle {
         margin-right: 30px;
         margin-bottom: 30px;
+        width: 60px;
+        height: 60px;
+        .icon-base{
+        	color: rgba(255,255,255, 1); 
+        	font-size: 60px;
+        	filter: drop-shadow(0px 1px 4px rgb(0 0 0 / 0.3));
+        }
+        .fake-circle{
+	        width: 44px;
+		    height: 44px;
+		    background-color: #fff;
+		    z-index: 1;
+		    border-radius: 50%;
+		    left: 8px;
+		    top: 6px;
+		    display: flex;
+		    justify-content: center;
+		    align-items: center;
+		    i{
+		    	color: #008b8c;
+		    	font-size: 24px;
+		    	position: relative;
+		    	left: -1px;
+		    	top: -1px;
+		    }
+        }
+        &.close_{
+        	transform: rotate(180deg) scaleX(-1);
+        	.fake-circle{
+			    i{
+			    	font-size: 18px;
+			    	left: -1px;
+			    	top: -2px;
+			    }
+	        }
+        }
     }
 }
